--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-mcp-python-sdk>=1.0.0
+# Core dependencies
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.0.0
@@ -9,14 +9,16 @@ python-multipart>=0.0.5
 aiofiles>=23.0.0
 python-dotenv>=1.0.0
 httpx>=0.25.0
-11#XM|httpx>=0.25.0
-#PM|loguru>=0.7.2
-#JV|pytest>=7.4.4
-#RT|pytest-asyncio>=0.21.0
-#KX|pytest-cov>=4.1.0
-#YW|black>=23.12.0
-#SP|ruff>=0.1.11
-#ZX|mypy>=1.7.1
-#SW|tenacity>=8.2.0
-#TQ|toml>=0.10.2
 
+# Optional: Logging
+loguru>=0.7.2
+
+# Development dependencies
+pytest>=7.4.4
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+black>=23.12.0
+ruff>=0.1.11
+mypy>=1.7.1
+tenacity>=8.2.0
+toml>=0.10.2
